--- a/public/word.css
+++ b/public/word.css
@@ -1,61 +1,95 @@
-body{
+body {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
-    background-color:gray;
+    background-color: grey;
 }
-hr{
-    width:500px;
 
+hr {
+    width: 500px;
 }
-#title{
+
+#title {
     font-size: 36px;
     font-weight: bold;
     letter-spacing: 2px;
-    
-   
 }
-#board{
+
+#board {
     width: 350px;
     height: 420px;
-    /* background-color: green; */
     margin: 0 auto;
-    margin-top:3px;
+    margin-top: 3px;
     display: flex;
     flex-wrap: wrap;
-    
 }
-.tile{
-    /*box */
-    border:2px solid lightgray;
-    width:60px;
+
+.tile {
+    /* Box */
+    border: 2px solid black;
+    width: 60px;
     height: 60px;
-    margin:2.5px;
-    background-color: azure;
-    
+    margin: 2.5px;
 
-
-    color:black;
-    font-size:36px ;
+    /* Text */
+    color:white;
+    font-size: 36px;
     font-weight: bold;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.correct{
-background-color: green;
-color:white;
-border-color: white;
 
+.correct {
+    background-color: #6AAA64;
+    color: white;
+    border-color: white;
 }
-.present{
-background-color: yellow;
-color:white;
-border-color: white;
 
+.present {
+    background-color:yellow;
+    color: white;
+    border-color: white;
 }
-.absent{
+
+.absent {
     background-color:red;
-    color:white;
+    color: white;
     border-color:white;
-    
+}
+
+
+.keyboard-row {
+    width: 400px;
+
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.key-tile {
+    width: 36px;
+    height: 40px;
+    margin: 1px;
+    border: 1px solid peru;
+
+    /* Text */
+    font-size: 20px;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.enter-key-tile {
+    width: 76px;
+    height: 40px;
+    margin: 1px;
+    border: 1px solid gold;
+
+    /* Text */
+    font-size: 20px;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
