--- a/public/word.css
+++ b/public/word.css
@@ -1,12 +1,30 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
-    background-color: grey;
+background-color: white;
+
 }
 
 hr {
     width: 500px;
+    font-style: italic;
+    border: double;
 }
+h1{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: larger;
+    display: inline-block;
+    background-color: red;
+
+
+}
+#answer1{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: larger;
+    display: inline-block;
+    background-color:greenyellow;
+}
+
 
 #title {
     font-size: 36px;
@@ -21,14 +39,22 @@ hr {
     margin-top: 3px;
     display: flex;
     flex-wrap: wrap;
+    border:groove;
+    border-radius: 10px;
+    
+}
+#board:hover{
+    background-color:black;
 }
 
 .tile {
     /* Box */
-    border: 2px solid black;
+    border: 2px groove black;
     width: 60px;
     height: 60px;
     margin: 2.5px;
+    border-color: aquamarine;
+    border-radius: 20px;
 
     /* Text */
     color:white;
@@ -64,6 +90,7 @@ hr {
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
+    border: groove;
 }
 
 .key-tile {
@@ -71,6 +98,8 @@ hr {
     height: 40px;
     margin: 1px;
     border: 1px solid peru;
+
+
 
     /* Text */
     font-size: 20px;
@@ -85,6 +114,8 @@ hr {
     height: 40px;
     margin: 1px;
     border: 1px solid gold;
+    background-color: gold;
+    
 
     /* Text */
     font-size: 20px;
@@ -92,4 +123,8 @@ hr {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.enter-key-tile:hover{
+    background-color: silver;
+    color:black
 }
