--- a/public/word.css
+++ b/public/word.css
@@ -57,7 +57,7 @@ h1{
     border-radius: 20px;
 
     /* Text */
-    color:white;
+    color:palevioletred;
     font-size: 36px;
     font-weight: bold;
     display: flex;
